<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attendee_activity"
    android:background="?background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AttendeeActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/attendee_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/actionbar_attendee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/attendee_top_nav"/>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_marginBottom="8sp"-->
<!--                android:layout_marginStart="48dp"-->
<!--                android:layout_marginEnd="48dp"-->
<!--                android:layout_marginTop="8sp">-->

<!--                <com.google.android.material.button.MaterialButton-->
<!--                    android:id="@+id/switch_events_button"-->
<!--                    style="@style/CustomOutlinedButton"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1"-->
<!--                    android:text="Browse All Events"-->
<!--                    app:icon="@drawable/ic_event_list"-->
<!--                    app:iconGravity="textStart"-->
<!--                    app:iconPadding="8dp" />-->
<!--            </LinearLayout>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventrecyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="3sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/bottom_nav"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:weightSum="4"
                android:background="@drawable/bottom_nav_attendee"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/user_mode_lin_layout"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/button_user_mode"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        app:srcCompat="?switchProfileIcon"
                        android:contentDescription="TODO" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/switch_profile_attendee"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                <ImageView
                    android:id="@+id/switch_events_button"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="?eventListIcon"/>

                    <TextView
                        android:id="@+id/browse_events_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/browse_all_events"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/check_in_img"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:src="?check_in_button_image" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/check_in"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/find_event_img"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:src="?search_button_image"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/find_event"/>
                </LinearLayout>
<!--                <ImageView-->
<!--                    android:id="@+id/check_in_img"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:src="?attr/check_in_button_image" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/find_event_img"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:paddingTop="7dp"-->
<!--                    android:paddingBottom="7dp"-->
<!--                    android:src="?attr/search_button_image" />-->

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
