<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?backgroundColor"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:elevation="2dp"
    android:focusable="true"
    tools:context=".users.Profile">
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:text="@string/cancel"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove_profile_img_button"
            android:background="?attr/button_color_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="3dp"
            android:text="@string/remove_profile_image"/>
...
